--- a/Literium/index.html
+++ b/Literium/index.html
@@ -72,7 +72,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/Imagenes/Mkt.jpg);">
+          <div class="carousel-item active" style="background-image: url(/C:\Users\jose\Documents\GitHub\claudiorsf.github.io\Literium\Imagenes/Mkt.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Marketing Digital</h2>
@@ -86,7 +86,7 @@
           <!-- Slide 3 -->
           <div class="carousel-item" style="background-image: url(/Imagenes/Nosotros.jpg);">
             <div class="carousel-container">
-              <div class="carousel-content">
+              <div class="carousel-conten
                 <h2 class="animate__animated animate__fadeInDown">Consultoría Organizacional</h2>
                 <p class="animate__animated animate__fadeInUp"> Cualquier compañía necesita optimizar su funcionamiento para garantizar su supervivencia a lo largo del tiempo. Buscamos soluciones innovadoras y eficientes para solucionar los problemas a los que se enfrentan las empresas en el mercado actual.</p>
                 <div>
