--- a/Literium/AnalisisDeDatos.html
+++ b/Literium/AnalisisDeDatos.html
@@ -44,11 +44,11 @@
               
               <li class="dropdown"><a href="#services"><span>Servicios</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a href="/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
-                  <li><a href="/Marketing Digital.html">Marketing Digital</a></li>
-                  <li><a href="/AnalisisDeDatos.html">Análisis De Datos</a></li>
-                  <li><a href="/DesarrolloWeb.html">Desarrollo Web</a></li>
-                  <li><a href="/DesarrolloDeSoftware.html">Desarrollo de software<br>(En contruccion)</a></li>
+                  <li><a href="/Literium/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
+                  <li><a href="/Literium/Marketing Digital.html">Marketing Digital</a></li>
+                  <li><a href="/Literium/AnalisisDeDatos.html">Análisis De Datos</a></li>
+                  <li><a href="/Literium/DesarrolloWeb.html">Desarrollo Web</a></li>
+                  <li><a href="/Literium/DesarrolloDeSoftware.html">Desarrollo de software<br>(En contruccion)</a></li>
                 </ul>
               </li>
               <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -69,7 +69,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/Imagenes/analisisDatos.jpg);">
+          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/analisisDatos.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Análisis de datos</h2>
@@ -79,7 +79,7 @@
             </div>
           </div>
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url(/Imagenes/Analsisdatos1.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/Analsisdatos1.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Análisis de datos</h2>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <!-- Slide 4 -->
-          <div class="carousel-item" style="background-image: url(/Imagenes/analsis03.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/analsis03.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Análisis de datos</h2>
@@ -99,7 +99,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url(/Imagenes/Analsis02.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/Analsis02.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Análisis de datos</h2>
@@ -137,7 +137,7 @@
         <p class="lead">El objetivo debe ser medible, claro y conciso. Establecerlos de esta forma te permitirá llevar un proceso mucho más preciso. Además, resulta más fácil decidir sobre el tipo o tipos de datos que necesitarás para sacar conclusiones. </p>
       </div>
       <div class="col-md-5">
-        <div class="img"><img src="/Imagenes/dudas.jpg" class="rounded float-left" width="400" height="200 alt="..."></div>
+        <div class="img"><img src="/Literium/Imagenes/dudas.jpg" class="rounded float-left" width="400" height="200 alt="..."></div>
       </div>
     </div>
 
@@ -149,7 +149,7 @@
         <p class="lead">Para asegurar la calidad del análisis es determinante medir el desempeño a través de indicadores clave. Durante este paso es importante definir dos aspectos: Decidir qué medir y como hacerlo</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <div class="img"><img src="/Imagenes/metricas.jpg" class="rounded float-right" width="400" height="200 alt="..."></div>
+        <div class="img"><img src="/Literium/Imagenes/metricas.jpg" class="rounded float-right" width="400" height="200 alt="..."></div>
       </div>
     </div>
 
@@ -161,7 +161,7 @@
         <p class="lead">Después de identificar los objetivos, el siguiente paso es la recopilación de los datos. Un análisis eficaz parte de la información que estarás usando para obtener conclusiones finales</p>
       </div>
       <div class="col-md-5">
-        <div class="img"><img src="/Imagenes/basededatos.png" class="rounded float-left" width="400" height="200 alt="..."></div>
+        <div class="img"><img src="/Literium/Imagenes/basededatos.png" class="rounded float-left" width="400" height="200 alt="..."></div>
       </div>
     </div>
 
@@ -175,7 +175,7 @@
             Para generar resultados precisos, debes identificar y purgar datos duplicados, anexar datos faltantes, corregir los registros  y otras inconsistencias que podrían sesgar el análisis.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <div class="img"><img src="/Imagenes/clasificacion.jpg" class="rounded float-right" width="400" height="200 alt="..."></div>
+        <div class="img"><img src="/Literium/Imagenes/clasificacion.jpg" class="rounded float-right" width="400" height="200 alt="..."></div>
       </div>
     </div>
     <hr class="featurette-divider">
@@ -185,7 +185,7 @@
           <p class="lead">Esto puede hacerse de distintas maneras, entre ellas: la minería de datos, software de Business Intelligence y la aplicación de análisis predictivos.</p>
         </div>
         <div class="col-md-5">
-          <div class="img"><img src="/Imagenes/analisis-de-datos.jpg" class="rounded float-left" width="400" height="200 alt="..."></div>
+          <div class="img"><img src="/Literium/Imagenes/analisis-de-datos.jpg" class="rounded float-left" width="400" height="200 alt="..."></div>
         </div>
       </div>
   
@@ -198,7 +198,7 @@
         </p>
         </div>
         <div class="col-md-5 order-md-1">
-          <div class="img"><img src="/Imagenes/interprestacion.jpg" class="rounded float-right" width="400" height="200 alt="..."></div>
+          <div class="img"><img src="/Literium/Imagenes/interprestacion.jpg" class="rounded float-right" width="400" height="200 alt="..."></div>
         </div>
       </div>
       <hr class="featurette-divider">
@@ -537,10 +537,10 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="/DesarrolloDeSoftware.html">Desarrollo de Software</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="/AnalisisDeDatos.html">Análisis de datos</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="/Marketing Digital.html">Marketing Digital</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Literium/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Literium/DesarrolloDeSoftware.html">Desarrollo de Software</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Literium/AnalisisDeDatos.html">Análisis de datos</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/Literium/Marketing Digital.html">Marketing Digital</a></li>
                
               </ul>
             </div>
