--- a/Literium/index.html
+++ b/Literium/index.html
@@ -186,7 +186,7 @@
             <img src="Imagenes/python.jpg" class="img-fluid" style="width:100px;height:100px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/Flask.png" class="img-fluid" style="width:100px;height:90px">
+            <img src="Imagenes/Flask.png" class="img-fluid" style="width:100px;height:90px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="/Imagenes/Django.jpg" class="img-fluid" style="width:100px;height:90px">
