--- a/Literium/index.html
+++ b/Literium/index.html
@@ -107,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url(/Imagenes/DESARROLLO-SOFTWARE.jpg);">
+          <div class="carousel-item" style="background-image: url(/Imagenes/DESARROLLO-SOFTWARE.jpg)">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Desarrollo Web</h2>
