--- a/Literium/index.html
+++ b/Literium/index.html
@@ -72,7 +72,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/C:\Users\jose\Documents\GitHub\claudiorsf.github.io\Literium\Imagenes/Mkt.jpg);">
+          <div class="carousel-item active" style="background-image: url(/Imagenes/Mkt.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Marketing Digital</h2>
@@ -107,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url(/Imagenes/DESARROLLO-SOFTWARE.jpg)">
+          <div class="carousel-item" style="background-image: url(/Imagenes/DESARROLLO-SOFTWARE.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Desarrollo Web</h2>
