--- a/Literium/DesarrolloWeb.html
+++ b/Literium/DesarrolloWeb.html
@@ -80,7 +80,7 @@
             </div>
           </div>
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url(/Imagenes/diseño1.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/diseño.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Diseño Web</h2>
