--- a/Literium/index.html
+++ b/Literium/index.html
@@ -45,7 +45,7 @@
           
           <li class="dropdown"><a href="#services"><span>Servicios</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
+              <li><a href="/Literium/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
               <li><a href="/Marketing Digital.html">Marketing Digital</a></li>
               <li><a href="/AnalisisDeDatos.html">Análisis De Datos</a></li>
               <li><a href="/DesarrolloWeb.html">Desarrollo Web</a></li>
