--- a/Literium/Consultoria Organizacional.html
+++ b/Literium/Consultoria Organizacional.html
@@ -69,7 +69,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/analisisDatos.jpg;)">
+          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/Asesoramiento.jpg)">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Consultoría Organizacional</h2>
