--- a/Literium/DesarrolloWeb.html
+++ b/Literium/DesarrolloWeb.html
@@ -70,7 +70,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/Imagenes/diseño.jpg);">
+          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/diseño.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Diseño Web</h2>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <!-- Slide 4 -->
-          <div class="carousel-item" style="background-image: url(/Imagenes/diseño2.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/diseño2.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Diseño Web</h2>
@@ -99,7 +99,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url(/Imagenes/diseño4.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/diseño4.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Diseño Web</h2>
