--- a/Literium/DesarrolloWeb.html
+++ b/Literium/DesarrolloWeb.html
@@ -70,7 +70,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/diseño.jpg);">
+          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/diseño1.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Diseño Web</h2>
