--- a/Literium/index.html
+++ b/Literium/index.html
@@ -46,10 +46,10 @@
           <li class="dropdown"><a href="#services"><span>Servicios</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="/Literium/Consultoria Organizacional.html">Consultoría Organizacional</a></li>
-              <li><a href="/Marketing Digital.html">Marketing Digital</a></li>
-              <li><a href="/AnalisisDeDatos.html">Análisis De Datos</a></li>
-              <li><a href="/DesarrolloWeb.html">Desarrollo Web</a></li>
-              <li><a href="/DesarrolloDeSoftware.html">Desarrollo de software<br>(En contruccion)</a></li>
+              <li><a href="/Literium/Marketing Digital.html">Marketing Digital</a></li>
+              <li><a href="/Literium/AnalisisDeDatos.html">Análisis De Datos</a></li>
+              <li><a href="/Literium/DesarrolloWeb.html">Desarrollo Web</a></li>
+              <li><a href="/Literium/DesarrolloDeSoftware.html">Desarrollo de software<br>(En contruccion)</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
