--- a/Literium/index.html
+++ b/Literium/index.html
@@ -72,7 +72,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(/Imagenes/Mkt.jpg);">
+          <div class="carousel-item active" style="background-image: url(/Literium/Imagenes/Mkt.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Marketing Digital</h2>
@@ -84,7 +84,7 @@
             </div>
           </div>
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url(/Imagenes/Nosotros.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/Nosotros.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Consultoría Organizacional</h2>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <!-- Slide 4 -->
-          <div class="carousel-item" style="background-image: url(/Imagenes/AnalsisDeDatos.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/AnalsisDeDatos.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Análisis de datos</h2>
@@ -107,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url(/Imagenes/DESARROLLO-SOFTWARE.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/DESARROLLO-SOFTWARE.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Desarrollo Web</h2>
@@ -183,23 +183,23 @@
 
          
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="Imagenes/python.jpg" class="img-fluid" style="width:100px;height:100px">
+            <img src="/LiteriumImagenes/python.jpg" class="img-fluid" style="width:100px;height:100px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="Imagenes/Flask.png" class="img-fluid" style="width:100px;height:90px">
+            <img src="/LiteriumImagenes/Flask.png" class="img-fluid" style="width:100px;height:90px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/Django.jpg" class="img-fluid" style="width:100px;height:90px">
+            <img src="/Literium/Imagenes/Django.jpg" class="img-fluid" style="width:100px;height:90px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/Html5-JS-css-logo.jpg" class="img-fluid" style="width:100px;height:130px">
+            <img src="/Literium/Imagenes/Html5-JS-css-logo.jpg" class="img-fluid" style="width:100px;height:130px">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/boot.jpg" class="img-fluid" style="width:100px;height:90px">
+            <img src="/Literium/Imagenes/boot.jpg" class="img-fluid" style="width:100px;height:90px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/BI.jpg" class="img-fluid" style="width:100px;height:90px">
+            <img src="/Literium/Imagenes/BI.jpg" class="img-fluid" style="width:100px;height:90px">
           </div>
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="/Imagenes/GoogleA.png" class="img-fluid" style="width:100px;height:100px">
@@ -209,11 +209,11 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/project-icon-14.jpg" class="img-fluid" style="width:100px;height:90px">
+            <img src="/Literium/Imagenes/project-icon-14.jpg" class="img-fluid" style="width:100px;height:90px">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/Imagenes/visio.jpeg" class="img-fluid" style="width:100px;height:120px">
+            <img src="/Literium/Imagenes/visio.jpeg" class="img-fluid" style="width:100px;height:120px">
           </div>
 
         </div>
