--- a/Literium/index.html
+++ b/Literium/index.html
@@ -307,7 +307,7 @@
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box">
-              <h4> Conviccion</h4>
+              <h4> Convicción</h4>
               <p>Tenemos la certeza que en la integración y combinación de las partes que componen nuestra empresa está la clave para el éxito de nuestro servicio para el cliente .</p>
             </div>
           </div>
