--- a/Literium/index.html
+++ b/Literium/index.html
@@ -232,7 +232,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box shadow-sm p-3 mb-5 bg-body rounded">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="/Consultoria Organizacional.html">Consultoría Organizacional</a></h4>
+            <h4 class="title"><a href="Consultoria Organizacional.html">Consultoría Organizacional</a></h4>
             <p class="description align-items-center justify-content-center ">Cualquier compañía necesita optimizar su funcionamiento para garantizar su supervivencia a lo largo del tiempo. Buscamos soluciones innovadoras y eficientes para solucionar los problemas a los que se enfrentan las empresas en el mercado actual.</p>
           </div>
           
@@ -254,7 +254,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box shadow-sm p-3 mb-5 bg-body rounded">
             <div class="icon"><i class="bi bi-window-dock"></i></div>
-            <h4 class="title"><a href="/DesarrolloWeb.html">Desarrollo Web</a></h4>
+            <h4 class="title"><a href="DesarrolloWeb.html">Desarrollo Web</a></h4>
             <p class="description align-items-center justify-content-center">Somos especialistas en gestionar procesos de transformación digital a través de plataformas web combinando imaginación y tecnología.</p>
           </div>
       </div>
