--- a/Literium/index.html
+++ b/Literium/index.html
@@ -328,10 +328,12 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">Todos</li>
+              <li data-filter=".filter-app">Consultoria Organizacional</li>
+              <li data-filter=".filter-card">Marketing Digital</li>
+              <li data-filter=".filter-web">Analisis de Datos</li>
+              <li data-filter=".filter-card">Desarrollo Web</li>
+              <li data-filter=".filter-web">Desarrollo de Software</li>
             </ul>
           </div>
         </div>
@@ -342,8 +344,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Consultoria </h4>
+                <p>Cossultoria Organizacional</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
