--- a/Literium/DesarrolloWeb.html
+++ b/Literium/DesarrolloWeb.html
@@ -223,7 +223,9 @@
 
     <div class="section-title">
       <h2>Portfolio</h2>
-      <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <p>Conscientes de los nuevos retos que enfrentan las empresas y organizaciones, ofrecemos asesoría
+        personalizada, efectiva y oportuna, sobre diversos tópicos de su interés que le faciliten la toma de
+        decisiones. La opinión de nuestros expertos le permitirá decidir la mejor alternativa.</p>
     </div>
 
     <div class="row">
