--- a/Literium/Marketing Digital.html
+++ b/Literium/Marketing Digital.html
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url(/Literium/SeccionMKT3.jpg);">
+          <div class="carousel-item" style="background-image: url(/Literium/Imagenes/SeccionMKT3.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Marketing Digital</h2>
