--- a/Literium/index.html
+++ b/Literium/index.html
@@ -658,7 +658,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Equipo</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Servicios</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Politica de servicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/Literium/PoliticadePrivacidad.html">Politica de privacidad</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="">Politica de privacidad</a></li>
             </ul>
           </div>
