--- a/Literium/index.html
+++ b/Literium/index.html
@@ -364,7 +364,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="/Literium/Imagenes/Asesoramiento.jpg" class="img-fluid" alt="">
+              <img src="/Literium/Imagenes/Asesoramiento.jpg"  class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>En Construccion</h4>
                 <p>En Construccion</p>
@@ -380,10 +380,10 @@
             <div class="portfolio-wrap">
               <img src="/Literium/Imagenes/web3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>En Construccion</h4>
-                <p>En Construccion</p>
+                <h4>Turismo</h4>
+                <p>Turismo</p>
                 <div class="portfolio-links">
-                  <a href="/Literium/Imagenes/web3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="asesoramientoclass="bx bx-plus"></i></a>
+                  <a href="/Literium/Imagenes/web3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Asesoramiento "class="bx bx-plus"></i></a>
                  
                 </div>
               </div>
@@ -406,7 +406,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="/Literium/Imagenes/asesoramiento1.jpg" class="img-fluid" alt="">
+              <img src="/Literium/Imagenes/asesoramiento1.jpg"  class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>En Construccion</h4>
                 <p>En contruccion</p>
