--- a/Literium/index.html
+++ b/Literium/index.html
@@ -649,7 +649,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Equipo</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Servicios</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Servicioss</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/Literium/PoliticadePrivacidad.html">Politica de privacidad</a></li>
 
               
