--- a/Literium/index.html
+++ b/Literium/index.html
@@ -231,7 +231,7 @@
           
           
           <div class="col-lg-4 col-md-6 icon-box shadow-sm p-3 mb-5 bg-body rounded">
-            <div class="icon"><i class="bi bi-rocket"></i></div>  
+            <div class="icon"><i class="bi-gear"></i></div>
             <h4 class="title"><a href="RPA.html"> R P A</a></h4>
             <p class="description align-items-center justify-content-center">La automatización robótica de procesos (RPA) es una tecnología para todo aquel que quiera automatizar tareas digitales.</p>
           </div>
